fix: off center dialogue (#16)

--- a/src/styles/query.css
+++ b/src/styles/query.css
@@ -73,11 +73,10 @@
   transform: scale(0.5);
 }
 
-#query-page .copied-dialauge {
+#query-page .copied-dialogue {
   position: fixed;
   bottom: 10px;
   left: 50%;
-  transform: translateX(-50%);
   background-color: var(--dark-cream);
   font-size: 14px;
   color: var(--page-offset);
@@ -85,7 +84,7 @@
   border-radius: 7px;
   box-shadow: 0px 4px 8px #00000040;
   /* Stow prior to animation */
-  transform: translateY(50px);
+  transform: translate(-50%, 50px);
 }
 
 .fly-in {
@@ -94,16 +93,16 @@
 
 @keyframes fly-in {
   0% {
-    transform: translateY(50px);
+    transform: translate(-50%, 50px);
   }
   10% {
-    transform: translateY(0px);
+    transform: translate(-50%, 0px);
   }
   90% {
-    transform: translateY(0px);
+    transform: translate(-50%, 0px);
   }
-  1000% {
-    transform: translateY(50px);
+  100% {
+    transform: translate(-50%, 50px);
   }
 }
 
